# fruit_detection

./: LICENSE  Makefile  README.md  pyproject.toml
data/raw/: README.dataset.txt  README.roboflow.txt  data.yaml
data/raw/test/labels/: IMG_0718_resized_jpg.rf.ed26e36d79fdc08716b3ec100df06a0c.txt  WIN_20240313_14_16_32_Pro_jpg.rf.ca56babd63367acde802c2f4acd990c0.txt  WIN_20240313_14_16_40_Pro_jpg.rf.98af096be11efeca3c04e65d1fd0d486.txt  WIN_20240313_14_17_03_Pro_jpg.rf.565245166043397b7f483b12920dd477.txt  WIN_20240313_14_17_27_Pro-2-_jpg.rf.5e54a7018c6d8c469235a42443731861.txt  WIN_20240313_14_17_58_Pro_jpg.rf.0828e13676f6bbdd9101f92e7d2c6e5b.txt  WIN_20240313_14_17_59_Pro_jpg.rf.5460562f136a236eb5b5f9de0f572b8c.txt  WIN_20240313_14_18_00_Pro-2-_jpg.rf.b2d2bc38a3c0bb3504579f38bbcd63b4.txt  WIN_20240313_14_18_01_Pro_jpg.rf.95d038c113f047cdbf6062f32bd0f477.txt  WIN_20240313_14_18_02_Pro_jpg.rf.1347076c17c01316ce4ec592c616456c.txt  WIN_20240313_14_18_17_Pro_jpg.rf.262b10b30a453fff2cdcfd742de4b80a.txt  WIN_20240313_14_18_19_Pro_jpg.rf.d490bf90f62a8cd4014d076a2311f349.txt  WIN_20240313_14_19_47_Pro_jpg.rf.41875a0465711fc18e197aac00c02e84.txt
data/raw/train/: labels.cache
data/raw/train/labels/: IMG_0709_resized_jpg.rf.c0e0721f23a4ef0dba74e7e7876293f5.txt  (+271 more)
data/raw/valid/: labels.cache
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
fruit_detection/: __init__.py  predict_model.py  train_model.py
notebooks/: inference.ipynb  inference.py  train.ipynb  train_colab.ipynb
(+30 files in other folders)
